# n3ro-protocol

./: .env.example  .gitignore  INTRODUCTION.md  README.md  SKILL.md  package.json
contracts/: hardhat.config.ts  package.json  tsconfig.json
contracts-solana/: .gitignore  Anchor.toml  Cargo.toml  README.md
contracts-solana/programs/n3roai-solana/: Cargo.toml
contracts-solana/programs/n3roai-solana/src/: constants.rs  contexts.rs  errors.rs  helpers.rs  lib.rs  state.rs
contracts-solana/programs/n3roai-solana/src/instructions/: admin.rs  identity.rs  mod.rs  reputation.rs  revenue.rs  verification.rs
contracts/contracts/: AgentReputationOracle.sol  AgentVerificationHub.sol  IdentityRegistry.sol  RevenueSplitHub.sol
contracts/contracts/common/: AgentAuthorization.sol  Errors.sol
contracts/contracts/interfaces/: IAgentVerificationHub.sol  IIdentityRegistry.sol
contracts/scripts/: config-roles.ts  deploy.ts
contracts/test/: basic-flow.spec.ts
emergency-portfolio-protection/: SKILL.md
portfolio-pnl-monitoring/: SKILL.md
register/: SKILL.md
src/: app.ts  index.ts
src/blockchain/: abis.ts  client.ts  reputation-oracle-gateway.ts  revenue-split-gateway.ts  solana-program.ts
src/bootstrap/: dependencies.ts
src/config/: env.ts
src/lib/: http-error.ts  logger.ts
src/middleware/: async-handler.ts  error-middleware.ts
src/routes/: health.ts
src/trade/: controller.ts  hash.ts  router.ts  service.ts  types.ts
src/x402/: payment.ts
token-discovery-purchase/: SKILL.md
token-tracking-growth-purchase/: SKILL.md
(+1 files in other folders)
